--- a/package.json
+++ b/package.json
@@ -20,26 +20,49 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@ionic-native/base64": "^4.18.0",
+    "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.17.0",
+    "@ionic-native/document-viewer": "^4.18.0",
+    "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "^2.2.0",
+    "bootstrap": "^4.2.1",
+    "com-badrit-base64": "0.2.0",
     "cordova-android": "7.1.4",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-document-viewer": "0.9.10",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.6.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "konva": "^2.6.0",
+    "lodash": "^4.17.11",
+    "ng2-konva": "^6.0.0",
+    "ng2-pdf-viewer": "^5.2.3",
+    "ngx-bootstrap": "^3.1.3",
+    "ngx-gauge": "^1.0.0-beta.7",
+    "ngx-swiper-wrapper": "^7.1.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "swiper": "^4.4.6",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@types/lodash": "^4.14.119",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -53,7 +76,11 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {},
+      "com-badrit-base64": {},
+      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-document-viewer": {}
     },
     "platforms": [
       "android"
