--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/document-viewer": "^4.18.0",
+    "@ionic-native/file": "^4.18.0",
+    "@ionic-native/file-opener": "^4.18.0",
+    "@ionic-native/file-transfer": "^4.18.0",
     "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
@@ -37,6 +40,9 @@
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "0.9.10",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-opener2": "2.1.4",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -80,7 +86,12 @@
       "cordova-plugin-camera": {},
       "com-badrit-base64": {},
       "cordova-plugin-telerik-imagepicker": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
